--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 
 
 
+.minecraft/logs/*
+.minecraft/saves
+.minecraft/versions
+.minecraft/config
+.minecraft/CustomSkinLoader
+.minecraft/journeymap
+
+.minecraft/usercache.json
+.minecraft/usernamecache.json
